--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
+    <!-- Cabeçalho e meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/index.css">
-    <title>Index, Página principal</title>
+    <title>Blog de Jogos - Página Principal</title>
 </head>
 <body>
-    <!---------  Barra de navegação  ---------------->
+    <!-----  barra de navegação ----->
     <header>
         <nav class="NavBar">
             <ul>
@@ -23,20 +24,29 @@
             </ul>
         </nav>
     </header>
+    <!-----  fim da barra de navegação  ----->
 
-    <!----------  Fim da Barra de navegação  ------------>
+    <!-----  conteúdo principal  ----->
+    <main>
+        <div class="welcome-section">
+            <h1>Bem-vindo ao Blog de Jogos</h1>
+            <p>Compartilhe seus jogos, descubra novos projetos e conecte-se com outros desenvolvedores.</p>
+        </div>
 
+        <div class="empty-state">
+            <h2>Nenhum post ainda</h2>
+            <p>Seja o primeiro a compartilhar seu jogo com a comunidade!</p>
+            <a href="/login/login.html" class="create-post-btn">Criar Post</a>
+        </div>
+    </main>
+    <!-----  fim do conteúdo principal  ----->
 
-     <!---------  Footer  ---------------->
-
+    <!-----  footer  ----->
     <footer>
         <p>@ 2025 Axel Tavernard. Todos os direitos reservados</p>
         <a href="https://github.com/AxelTav001" target="_blank">Github</a>
         <a href="https://www.linkedin.com/in/axel-tavernard-54a57b247/" target="_blank">Linkedin</a>
     </footer>
-
-    <!----------  Fim do footer  ------------>
-
-
+    <!-- fim do footer -->
 </body>
 </html>
